# ryanR-type

./: .gitignore  CMakeLists.txt  CMakePresets.json  HOWTOCONTRIBUTE.md  README.md  cStylChecker.sh  unit-test.md  vcpkg.json
client/: CMakeLists.txt  ClientGameStateConversions.cpp  ClientLibLoading.cpp  ClientNetwork.cpp  ClientNetwork.hpp  ClientReceivedPacket.cpp  ClientSentPacket.cpp  Core.cpp  Core.hpp  DeathAnimationSpawner.cpp  DeathAnimationSpawner.hpp  MouseInputHandler.cpp  MouseInputHandler.hpp  SettingsConfig.cpp  SettingsConfig.hpp  SettingsManager.cpp  SettingsManager.hpp  Utils.cpp  Utils.hpp  colors.hpp  constants.hpp  main.cpp
client/Utils/: Encryption.cpp  SecureJsonManager.cpp
client/components/: CMakeLists.txt
client/graphicals/: CMakeLists.txt  EventTypes.hpp  FontManager.cpp  FontManager.hpp  IEvent.hpp  IWindow.hpp  SfmlEvent.cpp  SfmlEvent.hpp  SfmlKeyMappings.hpp  SfmlWindow.cpp  SfmlWindow.hpp  TextureManager.cpp  TextureManager.hpp
client/initResourcesManager/: CMakeLists.txt  GraphicalInputProvider.cpp  GraphicalInputProvider.hpp  initResourcesManager.cpp  initResourcesManager.hpp
client/initRessourcesManager/: CMakeLists.txt  GraphicalInputProvider.cpp  GraphicalInputProvider.hpp  initRessourcesManager.cpp  initRessourcesManager.hpp
client/input/: CMakeLists.txt  MouseInputHandler.cpp  MouseInputHandler.hpp
client/interpolation/: CMakeLists.txt  NetworkStateComponent.hpp
client/packet/: CMakeLists.txt  DefaultPacketHandlers.cpp  DefaultPacketHandlers.hpp
client/systems/: CMakeLists.txt  NetworkInterpolationSystem.hpp
client/ui/: Button.cpp  Button.hpp  CMakeLists.txt  UIElement.cpp  UIElement.hpp
common/: CMakeLists.txt  DLLoader.cpp  FloatQuantization.hpp  GameRules.cpp  GameRules.hpp  LoaderType.hpp  constants.hpp  debug.cpp  debug.hpp  pch.hpp  translationToECS.hpp
common/CollisionRules/: CMakeLists.txt  CollisionRules.cpp  CollisionRules.hpp  CollisionRulesData.hpp
common/DLLoader/: CMakeLists.txt  DLLoader.hpp  ILoader.hpp  LoaderType.hpp
common/ECS/: CMakeLists.txt
common/Error/: AError.cpp  AError.hpp  CMakeLists.txt  ClientError.cpp  ClientError.hpp  ClientNetworkError.cpp  ClientNetworkError.hpp  IError.hpp  LibrairiesLoadError.cpp  LibrairiesLoadError.hpp  PacketError.cpp  PacketError.hpp  ParserError.cpp  ParserError.hpp  ScriptingError.cpp  ScriptingError.hpp  ServerErrror.cpp  ServerErrror.hpp
common/ImputMapping/: InputMappingManager.cpp
common/InputMapping/: CMakeLists.txt  IInputProvider.hpp  InputAction.hpp  InputMapping.hpp  InputMappingManager.cpp  InputMappingManager.hpp
common/Parser/: CMakeLists.txt  CollisionRules.cpp  CollisionRules.hpp  CollisionRulesParser.cpp  CollisionRulesParser.hpp  ComponentParserCreators.cpp  Parser.cpp  Parser.hpp  ParserParam.hpp
common/Prefab/: APrefab.cpp  APrefab.hpp  CMakeLists.txt  IPrefab.hpp  ParsedEntityPrefab.cpp  ParsedEntityPrefab.hpp
common/Signal/: CMakeLists.txt  Signal.cpp  Signal.hpp
common/SpatialGrid/: CMakeLists.txt  SpatialGrid.cpp  SpatialGrid.hpp
common/gsm/: IGameState.hpp  IGameStateMachine.hpp
common/interfaces/: IAudio.hpp  IBuffer.hpp  IEvent.hpp  IEventLoop.hpp  INetwork.hpp  INetworkAddress.hpp  INetworkEndpoint.hpp  INetworkResolver.hpp  INetworkSocket.hpp  IPacketManager.hpp  IWindow.hpp
common/packet/: CMakeLists.txt  DefaultPacketHandlers.cpp  DefaultPacketHandlers.hpp  GameStateHandlers.cpp  GameStateHandlers.hpp  GameStateHandlersOptimized.cpp  GameStateHandlersOptimized.hpp
common/resourceManager/: ResourceManager.hpp  ResourceManager.tpp
common/systems/: CMakeLists.txt  SystemLoader.cpp  SystemLoader.hpp  SystemNames.hpp
common/types/: CMakeLists.txt  Chrono.cpp  Chrono.hpp  FRect.cpp  FRect.hpp  OrientedRect.cpp  OrientedRect.hpp  Vector2f.cpp  Vector2f.hpp
common/utils/: Encryption.cpp  Encryption.hpp  SecureJsonManager.cpp  SecureJsonManager.hpp
libs/Buffer/: CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.hpp  IBuffer.hpp
libs/Multimedia/: CMakeLists.txt  EventTypes.hpp  FontManager.cpp  FontManager.hpp  IEvent.hpp  IWindow.hpp  MultimediaEntry.cpp  RoundedRectangleShape.cpp  RoundedRectangleShape.hpp  SfmlAudio.cpp  SfmlAudio.hpp  SfmlEntry.cpp  SfmlEvent.cpp  SfmlEvent.hpp  SfmlKeyMappings.hpp  SfmlWindow.cpp  SfmlWindow.hpp  ShaderManager.cpp  ShaderManager.hpp  TextureManager.cpp  TextureManager.hpp
libs/Network/: ANetwork.cpp  ANetwork.hpp  AsioEventLoop.cpp  AsioEventLoop.hpp  CMakeLists.txt  IEventLoop.hpp  INetwork.hpp  INetworkAddress.hpp  INetworkEndpoint.hpp  INetworkErrorCode.hpp  INetworkFactory.hpp  INetworkResolver.hpp  INetworkSocket.hpp  NetworkAddress.cpp  NetworkAddress.hpp  NetworkConfig.hpp  NetworkEndpoint.cpp  NetworkEndpoint.hpp  NetworkErrorCode.cpp  NetworkErrorCode.hpp  NetworkFactory.hpp  NetworkResolver.cpp  NetworkResolver.hpp  NetworkSocket.cpp  NetworkSocket.hpp  common.hpp
libs/Packet/: CMakeLists.txt  ComponentDeltaTracker.cpp  ComponentDeltaTracker.hpp  ComponentSerializer.cpp  ComponentSerializer.hpp  IPacket.hpp  IPacketManager.hpp  Pack.cpp  PackGameState.cpp  Packet.cpp  Packet.hpp  PacketManager.cpp  PacketManager.hpp  PacketTypes.cpp  Unpack.cpp  UnpackGameState.cpp
server/: CMakeLists.txt  ComponentDeltaTracker.cpp  ComponentDeltaTracker.hpp  ComponentSerializer.cpp  Constants.hpp  Core.cpp  Core.hpp  CoreInputConversions.cpp  ECSConversions.cpp  IServer.hpp  Lobby.cpp  Lobby.hpp  LobbyStruct.hpp  Makefile  Server.cpp  Server.hpp  ServerConfig.cpp  ServerConfig.hpp  ServerLibsLoading.cpp  ServerReceivePacket.cpp  ServerSentPacket.cpp  Utils.cpp  Utils.hpp  constants.hpp  main.cpp
server/deltaTracker/: CMakeLists.txt  ComponentDeltaTracker.cpp  ComponentDeltaTracker.hpp  ComponentSerializer.cpp  ComponentSerializer.hpp
server/gsm/: CMakeLists.txt  gsmStates.hpp
server/http/: .env.example  HttpServer.cpp  HttpServer.hpp
server/initResourcesManager/: CMakeLists.txt  ServerInputProvider.cpp  ServerInputProvider.hpp  initResourcesManager.cpp  initResourcesManager.hpp
server/initRessourcesManager/: CMakeLists.txt  (+4 more)
tests/: CMakeLists.txt
(+1069 files in other folders)
