set(ECS_LIB_NAME ECS)
set(ERROR_LIB ERROR)

add_subdirectory(DLLoader)
add_subdirectory(ECS)
add_subdirectory(components)
add_subdirectory(systems)
add_subdirectory(types)
add_subdirectory(Error)
add_subdirectory(Signal)
add_subdirectory(Prefab)
add_subdirectory(resourceManager)
add_subdirectory(ImputMapping)
add_subdirectory(Parser)
